--- a/min_max.html
+++ b/min_max.html
@@ -20,12 +20,16 @@
             }
             return arr;
         }
-        let sum=0;
-        let ar=SortArr(arr);
-        console.log(arr);
-        console.log("Minimum element in the array is",ar[0]);
-        console.log("Maximum element in the array is",ar[arr.length-1]);
-        console.log("sum of maximum and minimum number is=",arr[0]+arr[arr.length-1]);
+        let ar = SortArr(arr);
+        console.log("Sorted array:", ar);
+
+        let min = ar[0];
+        let max = ar[arr.length - 1];
+        let sum = min + max;
+
+        console.log("Minimum element in the array is", min);
+        console.log("Maximum element in the array is", max);
+        console.log("Sum of maximum and minimum number is", sum);
     </script>
     
 </body>
