--- a/palindrome.html
+++ b/palindrome.html
@@ -21,7 +21,7 @@
         function findPalindrome(arr) {
             const palindromeNum = [];
             for (let i = 0; i < arr.length; i++) {
-                if (ispalindrome(arr[i])) {
+                if (palindrome(arr[i])) {
                     palindromeNum.push(arr[i]);
                 }
             }
